styles.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html, body {
    display: flex;
    flex-direction: column;
    height: 100%;
    width: 100%;
    min-width: 600px; 
    min-height: 400px; 
    background-color:rgb(67, 106, 223);
}

header {
    display: flex;
    align-items: center;
    margin: 0 42px;
    padding: 10px 0;
    background-color:rgb(67, 106, 223);
}

h1 {
   flex: 3;
   flex-shrink: 0;
}

h2 {
    flex: 5;
    text-align: center;
    flex-shrink: 0;

}


#main {
    display: flex;
    height: 100%;
    width: 100%;
    min-width: 600px;
    min-height: 400px;
    justify-content: center;

}

.side {
    flex-grow: 1;
    flex-shrink: 10;
    flex-basis: 100px;
    background-color:rgb(241, 241, 241);
}

#content {
    flex-grow: 1;
    flex-shrink: 1;
    display: flex;
    justify-content: center;
    height: 100%;
    max-width: 2380px;
}

#leftPanel {
    display: flex;
    flex-direction: column;

    max-width: 637px;
    min-width: 200px;
    min-height: 200px;

    width: 35%;
    height: 100%;
    
    background-color: #f8f8f8;
    padding: 20px;
    overflow: hidden;
    align-items: stretch;
    
}

#map {
    width: 100%;
    /* aspect-ratio: 1 / 1; */
    flex: 8 1 auto;
    min-height: 170px;
    max-height: 600px;
    max-width: 600px;
    background-color: #ddd; 
    align-self: center;
    margin-bottom: 20px;
}

#optionsContainer {
    display: flex;
    flex-direction: column;
    flex: 1 0 auto;
    min-height: 149px;
    width: 100%;
}

#searchContainer {
    display: flex;
    min-width: 0;
    flex-flow: row wrap;
    margin-bottom: 10px;    
    gap: 10px;

}

#currentLatitude,
#currentLongitude {
    padding: 10px;
    flex-grow: 1;
}

#currentLatitude:focus,
#currentLongitude:focus {
    outline: none;
    
}

#search {
    padding: 10px;
    flex-grow: 1;
}

#locateMe {
    align-self: center;
    padding: 0 10px;
    margin-bottom: 20px;
}

#radiusContainer {
    margin-bottom: 20px;
}

#radiusContainer h4{
    margin-bottom: 10px;
}

#radiusContainer div{
    display: flex;
    align-items: center;
}

#radiusSlider {
    margin-right: 10px;
}

#minimumRatingContainer {
    margin-bottom: 20px;
}

#minimumRatingContainer h4 {
    margin-bottom: 10px;
}

#orderByContainer {
    margin-bottom: 20px;
}
#orderByContainer h4 {
    margin-bottom: 10px;
}

#rightPanel {
    overflow-y: auto;
    padding: 20px;
    background-color: white;
    width: 65%;
}

table {
    width: 100%;
    table-layout: fixed;
    border-collapse: collapse;
    overflow: scroll;
}

th, td {
    border: 2px solid black;
    overflow: hidden;
    text-overflow: ellipsis;
    padding: 8px;
    text-align: center;
    white-space: nowrap;
}

th {
    background-color: #f2f2f2;
}

th:nth-child(1), td:nth-child(1) {
    width: 45%;
}
th:nth-child(2), td:nth-child(2) {
    width: 15%;
}
th:nth-child(3), td:nth-child(3) {
    width: 15%;
}
th:nth-child(4), td:nth-child(4) {
    width: 15%;
}
th:nth-child(5), td:nth-child(5) {
    width: 10%;
}

td img {
    max-width: 100px;
    height: auto;
    display: block;
    margin: 0 auto;
}

/* Media Query para dispositivos pequeños */
/* @media (max-width: 1068px) {
    body {
        flex-direction: column;
    }

    #content {
        flex-direction: column;
    }

    #leftPanel {
        width: 100%;
        margin: 10px;
    }

    #rightPanel {
        width: 100%;
        margin: 10px 10px 10px 0px;
    }

    #options {
        flex-direction: column;
    }

    #bottomOptionsContainer {
        flex-direction: column;
    }

    #radiusSlider {
        width: 100%;
        direction: ltr;
    }
} */

